# yahoo-mail-dl

./: .gitignore  README.md  pyproject.toml
src/yahoo_mail_dl/: __init__.py  cli.py  connection.py  constants.py  filters.py  mailbox.py  search.py
tests/: test_cli.py  test_filters.py  test_search.py
