[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yahoo-mail-dl"
version = "0.1.1"
description = "Reliable bulk download of email from Yahoo Mail and AOL accounts via IMAP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Email",
]

[project.scripts]
yahoo-mail-dl = "yahoo_mail_dl.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/yahoo_mail_dl"]

[tool.pytest.ini_options]
testpaths = ["tests"]